# EzPyMcpTools

./: .agentignore  .dockerignore  .gitignore  .mcphost.json  AGENTS.md  Dockerfile  LICENSE  Makefile  lmstudio.cfg.json  mcp_server.py  opencode_sessions.txt  pyproject.toml  readme.MD  user.data.json.example  utils.py
.github/: dependabot.yml
.github/workflows/: pr-ci.yml
scripts/: container_smoke_test.py  docker_smoke_test.py  run_tests.py
scripts/fixtures/: ipinfo.mock.json  weather.mock.html
tests/: conftest.py  test_datetime_utils.py  test_geo_location_utils.py  test_ip_address_utils.py  test_math_utils.py  test_pdf_utils.py  test_text_utils.py  test_user_information_utils.py  test_weather_utils.py
tests/fixtures/: store_receipt_dummy.html
utils/: _timezone_utils.py  date_time.py  datetime.py  geo_location.py  ip_address.py  math.py  pdf.py  text.py  user_data.py  user_info.py  user_information.py  weather.py
