[project]
name = "tools"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.12"
dependencies = [
    "fastmcp==3.2.0",
    "pypdf>=6.9.2",
    "weasyprint>=68.1",
]

[dependency-groups]
dev = [
    "black>=26.1.0",
    "isort>=8.0.1",
    "pytest>=9.0.2",
    "ruff>=0.15.0",
    "ty>=0.0.19",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = [
    "E",     # pycodestyle errors
    "W",     # pycodestyle warnings
    "F",     # pyflakes
    "I",     # isort (import sorting)
    "N",     # pep8-naming
    "UP",    # pyupgrade
    "B",     # flake8-bugbear
    "SIM",   # flake8-simplify
    "RUF",   # ruff-specific rules
]

[tool.ruff.lint.isort]
known-first-party = ["utils"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
